# avg4k

./: .gitignore  .gitmodules  Achievement.psd  Arrow.psd  Average4k.sln  EULA.txt  README.md  loc_english.vdf
Average4k/: ArrowEffects.cpp  ArrowEffects.h  Average4k.aps  Average4k.cpp  Average4k.h  Average4k.rc  Average4k.sln  Average4k.vcxproj  Average4k.vcxproj.filters  AvgButton.h  AvgCamera.cpp  AvgCamera.h  AvgCheckBox.h  AvgContainer.cpp  AvgContainer.h  AvgDropDown.h  AvgFrame.h  AvgGroup.cpp  AvgGroup.h  AvgHitGraph.h  AvgLua.h  AvgRect.h  AvgSprite.h  AvgTextBox.h  AvgWheel.cpp  AvgWheel.h  Base64.h  BufferRestore.h  CMakeCache.txt  CMakeLists.txt  CPacketChartAcquired.h  CPacketClientMissingChart.h  CPacketHello.h  CPacketHostChangeChart.h  CPacketHostEndChart.h  CPacketHostServer.h  CPacketJoinServer.h  CPacketLeaderboardRequest.h  CPacketNoteHit.h  CPacketSongFinished.h  (+115 more)
Average4k/Assets/Fallback/Fonts/: ArialUnicode.fnt
Average4k/Assets/Noteskin/AArrow/: skin.lua
Average4k/Assets/Noteskin/ABar/: skin.lua
Average4k/Assets/Noteskin/ACircle/: skin.lua
Average4k/FONT/: SDL_ttf.c  SDL_ttf.h
Average4k/Include/AvgEngine/: EventManager.h  Game.h
Average4k/Include/AvgEngine/Audio/: Channel.h
Average4k/Include/AvgEngine/Base/: Camera.h  Menu.h  Sprite.h  Text.h
Average4k/Include/AvgEngine/Debug/: Console.cpp  Console.h  ConsoleCommandHandler.cpp
Average4k/Include/AvgEngine/Render/: Display.cpp  Display.h
Average4k/Include/AvgEngine/Utils/: Logging.h  StringTools.h
Average4k/Include/Glad/: glad.h
Average4k/SourceFiles/: Main.cpp
Average4k/SourceFiles/Average4k/: A4kGame.cpp  A4kGame.h  Defines.h
Average4k/SourceFiles/Average4k/Api/: AvgLuaFile.cpp  AvgLuaFile.h
Average4k/SourceFiles/Average4k/Console/: CmdHandler.cpp  CmdHandler.h
Average4k/SourceFiles/Average4k/Data/: SaveData.h
Average4k/SourceFiles/Average4k/Helpers/: Base64.cpp  FileDiag.h  JudgementHelper.cpp  JudgementHelper.h  QuickAdd.h  SteamHelper.cpp  SteamHelper.h  StringTools.h  TimeToScreen.h  WaveformData.h
Average4k/SourceFiles/Average4k/Multiplayer/: Connection.cpp  Connection.h
Average4k/SourceFiles/Average4k/Objects/: BaseNote.cpp  BaseNote.h  Playfield.h  RenderTexture.h  UnicodeText.cpp  UnicodeText.h
Average4k/SourceFiles/Average4k/Skin/: Skin.cpp  Skin.h
Average4k/SourceFiles/Average4k/Steam/: UGCHandler.cpp  UGCHandler.h
Average4k/assets/: modchart docs.txt
Average4k/assets/charts/1-L Forest Funk/: 1-L Forest Funk.ds  1-L Forest Funk.dsx  1-L Forest Funk.sm  1-L Forest Funk.sm.old  Thumbs.db
Average4k/assets/charts/1-R Forest Funk RETRO/: 1-R Forest Funk RETRO.ds  1-R Forest Funk RETRO.dsx  Thumbs.db
Average4k/assets/charts/1-X Ballad of the Burning Squirrel/: 1-X Ballad of the Burning Squirrel.dsx  1-X Ballad of the Burning Squirrel.sm  Thumbs.db
Average4k/assets/charts/1-Z The Battle of Lil' Slugger/: 1-Z The Battle of Lil' Slugger.ds  1-Z The Battle of Lil' Slugger.dsx  Thumbs.db
Average4k/assets/charts/2-L Betus Blues/: 2-L Betus Blues.dsx  2-L Betus Blues.sm  Thumbs.db
Average4k/assets/charts/2-R Betus Blues RETRO/: 2-R Betus Blues RETRO.ds  2-R Betus Blues RETRO.dsx  2-R Betus Blues RETRO.sm  Thumbs.db
Average4k/assets/charts/2-X C.H.A.D.'s Broken Wind/: 2-X C.H.A.D.'s Broken Wind.ds  2-X C.H.A.D.'s Broken Wind.dsx  2-X C.H.A.D.'s Broken Wind.sm  Thumbs.db
Average4k/assets/charts/2-Z C.H.A.D.'s Lullaby/: 2-Z C.H.A.D.'s Lullaby.ds  2-Z C.H.A.D.'s Lullaby.dsx  2-Z C.H.A.D.'s Lullaby.sm  2-Z C.H.A.D.'s Lullaby.sm.old  Thumbs.db
Average4k/assets/charts/3-L Can o' Salt/: 3-L Can o' Salt.ds  3-L Can o' Salt.dsx  3-L Can o' Salt.sm  Thumbs.db
Average4k/assets/charts/3-R Can o' Salt RETRO/: 3-R Can o' Salt RETRO.dsx  3-R Can o' Salt RETRO.sm  Thumbs.db
Average4k/assets/charts/3-X Rocket Rider/: 3-X Rocket Rider.ds  3-X Rocket Rider.dsx  3-X Rocket Rider.sm  Thumbs.db
Average4k/assets/charts/3-Z Fast Track to Browntown/: 3-Z Fast Track to Browntown.ds  3-Z Fast Track to Browntown.dsx  3-Z Fast Track to Browntown.sm  Thumbs.db
Average4k/assets/charts/4-L Hot Damned/: 4-L Hot Damned.ds  4-L Hot Damned.dsx  4-L Hot Damned.sm  Thumbs.db
Average4k/assets/charts/4-R Hot Damned RETRO/: 4-R Hot Damned RETRO.ds  4-R Hot Damned RETRO.dsx  Thumbs.db
Average4k/assets/charts/4-X Devil N' Bass/: 4-X Devil N' Bass.ds  4-X Devil N' Bass.dsx  Thumbs.db
Average4k/assets/charts/4-Z Meat Golem/: 4-Z Meat Golem.ds  4-Z Meat Golem.dsx  Thumbs.db
Average4k/assets/charts/5-L It Ends/: 5-L It Ends.ds  5-L It Ends.dsx  5-L It Ends.sm  Thumbs.db
Average4k/assets/charts/5-R It Ends RETRO/: 5-R It Ends RETRO.ds  5-R It Ends RETRO.dsx  5-R It Ends RETRO.sm  Thumbs.db
Average4k/assets/charts/5-X Dr. Fetus' Castle/: 5-X Dr. Fetus' Castle.ds  5-X Dr. Fetus' Castle.dsx  5-X Dr. Fetus' Castle.sm  Thumbs.db
Average4k/assets/charts/5-Z Larries' Lament/: 5-Z Larries' Lament.ds  5-Z Larries' Lament.dsx  5-Z Larries' Lament.sm  Thumbs.db
Average4k/assets/charts/6-L It Ends 2- End Harder/: 6-L It Ends 2- End Harder.ds  6-L It Ends 2- End Harder.dsx  6-L It Ends 2- End Harder.sm  Thumbs.db
Average4k/assets/charts/6-Z1 Carmeaty Burana (part 1)/: 6-Z1 Carmeaty Burana (part 1).ds  6-Z1 Carmeaty Burana (part 1).dsx  6-Z1 Carmeaty Burana (part 1).sm  Thumbs.db
Average4k/assets/charts/6-Z1 Carmeaty Burana (part 2)/: 6-Z1 Carmeaty Burana (part 2).ds  6-Z1 Carmeaty Burana (part 2).dsx  6-Z1 Carmeaty Burana (part 2).sm  Thumbs.db
Average4k/assets/charts/6-Z2 Escape!/: 6-Z2 Escape!.ds  6-Z2 Escape!.dsx  6-Z2 Escape!.sm  Thumbs.db
Average4k/assets/charts/7-L McLarty Party People/: 7-L McLarty Party People.ds  7-L McLarty Party People.dsx  7-L McLarty Party People.sm  (+1 more)
Average4k/include/: SDL2_gfxPrimitives.h
Average4k/include/Themida/: ThemidaSDK.h
Average4k/include/ryml/: ryml.hpp  ryml_std.hpp
Average4k/lib/x64/: SDL2_ttf.lib  boost_exception-vc140-mt.lib
Average4k/lib/x64_static/: SDL2_image.lib  SDL2_mixer.lib  boost_coroutine-vc140-mt.lib  boost_regex-vc140-mt.lib  brotlidec-static.lib  ryml.lib  zip.lib  zlib.lib
Average4k/x64/Debug/: AvgEngine.idb
(+891 files in other folders)
